--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <script src="https://use.fontawesome.com/21283f4e24.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -29,9 +29,14 @@
         <div class="paddingTop container clearfix">
             <h1>Israel Abramov</h1>
             <h2>Full Stack Developer</h2>
-            <span>
-                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-            </span>
+            <div class="social">
+                <span class="linkedin">
+                    <a href="https://il.linkedin.com/in/israel-abramov-4aa994a7">
+                        <i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i>
+                    </a>
+                </span>
+            </div>
+
         </div>
     </section>
     <section  id="portfolio">
