--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a class="nav-link" href="#">PORTFOLIO </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">CONTACT </a>
+                    <a class="nav-link" href="#contact">CONTACT </a>
                 </li>
             </ul>
         </nav>
@@ -29,10 +29,16 @@
         <div class="paddingTop container clearfix">
             <h1>Israel Abramov</h1>
             <h2>Full Stack Developer</h2>
+            <div class="clear spacer20"></div>
             <div class="social">
                 <span class="linkedin">
-                    <a href="https://il.linkedin.com/in/israel-abramov-4aa994a7">
+                    <a href="https://il.linkedin.com/in/israel-abramov-4aa994a7" target="_blank">
                         <i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i>
+                    </a>
+                </span>
+                <span class="github">
+                    <a href="https://github.com/currensy" target="_blank">
+                        <i class="fa fa-github fa-3x" aria-hidden="true"></i>
                     </a>
                 </span>
             </div>
@@ -80,7 +86,7 @@
         </div>
 
     </section>
-    <footer>All right reserved</footer>
+
 </div>
 
 
